@@ -2,8 +2,7 @@ package com.pog.projeto.service;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.pog.projeto.dtos.*;
-import com.pog.projeto.entity.PacoteEntity;
-import com.pog.projeto.entity.PessoaEntity;
+import com.pog.projeto.entity.*;
 import com.pog.projeto.exception.BusinessException;
 import com.pog.projeto.repository.PacoteRepository;
 import com.pog.projeto.repository.PessoaRepository;
@@ -11,8 +10,10 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
-import java.util.List;
+import java.time.LocalDate;
+import java.time.ZoneId;
+import java.time.temporal.ChronoUnit;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
@@ -29,7 +30,6 @@ public class PacoteService {
 
     public PacoteDTO create() {
         PacoteEntity pacoteEntity = new PacoteEntity();
-        pacoteEntity.setPessoas(Collections.emptySet());
         pacoteEntity.setHoteis(Collections.emptySet());
         pacoteEntity.setRestauranteEntities(Collections.emptySet());
         pacoteEntity.setVooEntities(Collections.emptySet());
@@ -40,7 +40,11 @@ public class PacoteService {
         } else {
             pacoteEntity.setPromocional("N");
         }
-        pacoteEntity.getPessoas().add(pessoaEntity);
+        pacoteEntity.setDataPartida(Date.from(LocalDate.now().atStartOfDay().atZone(ZoneId.systemDefault()).toInstant()));
+        pacoteEntity.setDataChegada(Date.from(LocalDate.now().atStartOfDay().atZone(ZoneId.systemDefault()).toInstant()));
+        pacoteEntity.setNome("Pacote " + (pessoaEntity.getPacoteEntities().size() + 1));
+        pacoteEntity.setValor(0.0);
+        pacoteEntity.setPessoas(Collections.singleton(pessoaEntity));
         return toDTO(repository.save(pacoteEntity));
     }
 
@@ -66,13 +70,56 @@ public class PacoteService {
         if (pessoaEntity.getCargoEntity().getNome().equals("ROLE_ADMIN")) {
             return pessoaEntity.getPacoteEntities().stream()
                     .map(pacoteEntity -> objectMapper.convertValue(pacoteEntity, PacoteListagemDTO.class))
-                    .toList();
+                    .collect(Collectors.toList());
         } else {
             return pessoaEntity.getPacoteEntities().stream()
-                    .filter(pacoteEntity -> pacoteEntity.getPromocional() == "N")
+                    .filter(pacoteEntity -> pacoteEntity.getPromocional().equals("N"))
                     .map(pacoteEntity -> objectMapper.convertValue(pacoteEntity, PacoteListagemDTO.class))
-                    .toList();
+                    .collect(Collectors.toList());
         }
+    }
+
+    public PacoteDTO adicionarHotel(Integer idHotel, Integer idPacote) throws BusinessException {
+        PacoteEntity pacoteEntity = repository.findById(idPacote).orElseThrow(() -> new BusinessException("Não Encontrado pacote"));
+        Set<HotelEntity> hotel = pacoteEntity.getHoteis();
+        HotelEntity h = hotelService.findEntityById(idHotel);
+        hotel.add(h);
+        pacoteEntity.setHoteis(hotel);
+        LocalDate d1 = h.getDataChegada().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
+        LocalDate d2 = h.getDataPartida().toInstant().atZone(ZoneId.systemDefault()).toLocalDate();
+        Double dias = (double) ChronoUnit.DAYS.between(d2, d1);
+        pacoteEntity.setValor(pacoteEntity.getValor() + (dias * h.getDiaria()));
+        pacoteEntity = repository.save(pacoteEntity);
+        return toDTO(pacoteEntity);
+    }
+
+    public PacoteDTO adicionarPontoTuristico(Integer idPonto, Integer idPacote) throws BusinessException {
+        PacoteEntity pacoteEntity = repository.findById(idPacote).orElseThrow(() -> new BusinessException("Não Encontrado pacote"));
+        Set<PontoTuristicoEntity> pontoTuristicoEntities = pacoteEntity.getPontoTuristicoEntities();
+        pontoTuristicoEntities.add(pontoTuristicoService.findEntityById(idPonto));
+        pacoteEntity.setPontoTuristicoEntities(pontoTuristicoEntities);
+        pacoteEntity = repository.save(pacoteEntity);
+        return toDTO(pacoteEntity);
+    }
+
+    public PacoteDTO adicionarVoo(Integer idVoo, Integer idPacote) throws BusinessException {
+        PacoteEntity pacoteEntity = repository.findById(idPacote).orElseThrow(() -> new BusinessException("Não Encontrado pacote"));
+        Set<VooEntity> vooEntities = pacoteEntity.getVooEntities();
+        VooEntity v = vooService.findEntityById(idVoo);
+        vooEntities.add(vooService.findEntityById(idVoo));
+        pacoteEntity.setVooEntities(vooEntities);
+        pacoteEntity.setValor(pacoteEntity.getValor() + v.getValor());
+        pacoteEntity = repository.save(pacoteEntity);
+        return toDTO(pacoteEntity);
+    }
+
+    public PacoteDTO adicionarRestaurante(Integer idRestaurante, Integer idPacote) throws BusinessException {
+        PacoteEntity pacoteEntity = repository.findById(idPacote).orElseThrow(() -> new BusinessException("Não Encontrado pacote"));
+        Set<RestauranteEntity> restauranteEntities = pacoteEntity.getRestauranteEntities();
+        restauranteEntities.add(restauranteService.findEntityById(idRestaurante));
+        pacoteEntity.setRestauranteEntities(restauranteEntities);
+        pacoteEntity = repository.save(pacoteEntity);
+        return toDTO(pacoteEntity);
     }
 
 }
