@@ -14,6 +14,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
@@ -23,13 +24,13 @@ public class RestauranteService {
     private final RestauranteRepository repository;
 
     public RestauranteDTO create(RestauranteCreateDTO dto) {
-        return toDTO(toEntity(dto));
+        return toDTO(repository.save(toEntity(dto)));
     }
 
     public List<RestauranteDTO> list() {
         return repository.findAll().stream()
                 .map(restaurante -> toDTO(restaurante))
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public RestauranteDTO findById(Integer id) throws BusinessException {
@@ -37,7 +38,7 @@ public class RestauranteService {
                 .orElseThrow(() -> new BusinessException("Não Encontrado restaurante")));
     }
 
-    private RestauranteEntity findEntityById(Integer id) throws BusinessException {
+    public RestauranteEntity findEntityById(Integer id) throws BusinessException {
         return repository.findById(id)
                 .orElseThrow(() -> new BusinessException("Não Encontrado restaurante"));
     }
